Tue Jun  9 21:01:30 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/contrib/mcpp/directive.cpp:
        * TAO_IDL/contrib/mcpp/eval.cpp:
        * TAO_IDL/contrib/mcpp/expand.cpp:
        * TAO_IDL/contrib/mcpp/internal.H:
        * TAO_IDL/contrib/mcpp/main.cpp:
        * TAO_IDL/contrib/mcpp/mbchar.cpp:
        * TAO_IDL/contrib/mcpp/mcpp.mpc:
        * TAO_IDL/contrib/mcpp/noconfig.H:
        * TAO_IDL/contrib/mcpp/support.cpp:
        * TAO_IDL/contrib/mcpp/system.H:
        * TAO_IDL/contrib/mcpp/system.cpp:

          Compile warning fixes.
        
Tue Jun  9 20:25:50 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:
        * tao/IIOP_Endpoint.h:
        * tao/IIOP_Endpoint.cpp:
        * tao/IIOP_Profile.h:
        * tao/IIOP_Profile.cpp:

          Fix for bug #3695.  Keep alternate endpoints within a profile in
          the same order after marshalling/demarshalling so that is_equivalent
          return true.

Tue Jun  9 15:37:40 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * TAO_IDL/contrib/mcpp/directive.cpp:
        * TAO_IDL/contrib/mcpp/eval.cpp:
        * TAO_IDL/contrib/mcpp/expand.cpp:
        * TAO_IDL/contrib/mcpp/internal.H:
        * TAO_IDL/contrib/mcpp/support.cpp:
        * TAO_IDL/contrib/mcpp/system.cpp:

          fuzz fix.

Tue Jun  9 13:25:10 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>

        * DevGuideExamples/AMH/AMH_Messenger_i.cpp:
        * DevGuideExamples/AMH/MessengerServer.cpp:
        * DevGuideExamples/AMH/Messenger_i.cpp:
        * DevGuideExamples/AMH_AMI/inner_server.cpp:
        * DevGuideExamples/BiDirectionalGIOP/callback_i.cpp:
        * DevGuideExamples/BiDirectionalGIOP/client.cpp:
        * DevGuideExamples/BiDirectionalGIOP/server.cpp:
        * DevGuideExamples/BiDirectionalGIOP/simple_i.cpp:
        * DevGuideExamples/DevGuideExamples.mwc:
        * DevGuideExamples/GettingStarted/MessengerServer.cpp: