@@ -530,7 +530,7 @@ extern void     at_end( void);
                 /* Do the final commands        */
 extern void     print_heap( void);
                 /* Print blocks of heap memory  */
-#ifndef HOST_HAVE_STPCPY
+#if defined(HOST_HAVE_STPCPY) && HOST_HAVE_STPCPY == FALSE
 extern char *   stpcpy( char * dest, const char * src);
                 /* Non-Standard library function*/
 #endif
@@ -557,6 +557,6 @@ extern void     init_system( void);
 #endif
 #endif
 
-#ifndef HOST_HAVE_STPCPY
-extern char *   stpcpy( char * dest, const char * src);
-#endif
+///#if defined(HOST_HAVE_STPCPY) && HOST_HAVE_STPCPY == FALSE
+//extern char *   stpcpy( char * dest, const char * src);
+//#endif
