@@ -1,3 +1,11 @@
+Tue Jun  9 22:04:49 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * TAO_IDL/contrib/mcpp/internal.H:
+        * TAO_IDL/contrib/mcpp/lib.cpp:
+        * TAO_IDL/contrib/mcpp/system.cpp:
+
+          Compile warning fixes.
+        
 Tue Jun  9 21:01:30 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * TAO_IDL/contrib/mcpp/directive.cpp:
@@ -13,7 +21,7 @@ Tue Jun  9 21:01:30 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
         * TAO_IDL/contrib/mcpp/system.cpp:
 
           Compile warning fixes.
-        
+
 Tue Jun  9 20:25:50 UTC 2009  Adam Mitz  <mitza@ociweb.com>
 
         * bin/tao_orb_tests.lst:
